adds application insights

--- a/DevOps2/appsettings.json
+++ b/DevOps2/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "InstrumentationKey": "95790398-a203-4dbe-9d18-3913754833b4"
+  }
 }
