--- a/DevOps2/DevOps2.csproj
+++ b/DevOps2/DevOps2.csproj
@@ -3,10 +3,17 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <UserSecretsId>ef133d49-9310-446e-b04e-0d225d7f2e6e</UserSecretsId>
+    <ApplicationInsightsResourceId>/subscriptions/525c35e9-7250-4876-a142-09cbf87e6f5e/resourcegroups/Default-ApplicationInsights-EastUS/providers/microsoft.insights/components/DevOps2</ApplicationInsightsResourceId>
+    <ApplicationInsightsAnnotationResourceId>/subscriptions/525c35e9-7250-4876-a142-09cbf87e6f5e/resourcegroups/Default-ApplicationInsights-EastUS/providers/microsoft.insights/components/DevOps2</ApplicationInsightsAnnotationResourceId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services" />
   </ItemGroup>
 
 </Project>
